samples/_failures_safe/1761795363_2a04c2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_19e0c6bd.c: In function ‘main’:
./samples/SAFE/__tmp_19e0c6bd.c:143:12: error: expected declaration or statement at end of input
  143 |     struct Matrix product = matrix_multiply(&mat1, &mat2);
      |            ^~~~~~
